Write palindrome logic without using inbuilt for integer 1221 or "1221"?

--- a/MSPreparation/MSPreparation.csproj
+++ b/MSPreparation/MSPreparation.csproj
@@ -62,6 +62,7 @@
     <Compile Include="General\SingletonPattern.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Programs\ArmStrongNumber.cs" />
+    <Compile Include="Programs\Palindrome.cs" />
     <Compile Include="Programs\RefValParameters.cs" />
     <Compile Include="Programs\ReveseString.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
